# XboxGamePriceChecker

./: .gitignore  Makefile  README.md  caller.sh  gamelist.txt  main.py  pyproject.toml  settings.py
lib/: store.py
